0.8.5
 - Update plotting range when switching to log scale (#198)
 - Reset plotting range when performing a new analysis (#198)
 - Improved standard contour and kde accuracies using Doane's formula (#147)
 - Bugfixes:
   - Support opening tdms files with capitalized "userDef" column names
     (dclab dclab 0.3.2.dev5) (#212)
0.8.4
 - Add pixelation-corrected numerical and analytical isoelastics (#203)
 - Update emodulus look-up table (dclab 0.3.1.dev3) (#202)
 - Improved handling of polygon filters (partly #95)
 - Updated R version to 3.2.5 due to build errors
 - Bugfixes:
   - Young's modulus computation is wrong due to faulty FEM
     simulations (dclab 0.3.1.dev20) (#207)
   - Image/trace panel shows wrong event when the mouse pointer hovers
     from one scatter plot to another
   - Hierarchy children: image, contour, and trace data were not
     displayed in the image/trace panel (dclab 0.3.1.dev1) (#100)
   - Hierarchy children did not support manual filters (dclab 0.3.1.dev2)
   - Regression: Setting plotting range manually not possible (#201)
   - Pixel size not read from tdms-based data (dclab 0.3.1.dev13) (#205)
   - "limit events" filtering must be integer not boolean
     (dclab 0.3.2.dev3) (#210)
0.8.3
 - Prefer sample name from para.ini over data folder name (dclab 0.3.0.dev15)
 - Support new .rtdc file format (dclab 0.3.0.dev20) (#151)
 - Bugfixes:
   - Automatically fix inverted plotting range
   - Enable scrolling in data export dialogs
   - Ignore missing features during data export
   - Plotting circularity with isoelastics failed (dclab 0.3.0.dev21) (#197)
   - Plotting errors with log-scale axes (#194, #195)
   - SHIFT+ENTER shortcut did not update filters
   - Fixed memory leak (#187)
0.8.2
 - Add fluorescence crosstalk correction (#185)
 - Bugfixes:
   - Regression: Session autosaving broken (#191)
   - Young's modulus not updated (dclab 0.2.9.dev9) (#190)
   - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev15) (#189)